# fieldtool

examples/ESP-IDF/11_esp_brookesia_phone/main/: main.cpp
examples/ESP-IDF/14_TWAItransmit/main/: Kconfig.projbuild  twai_network_example_master_main.c
field-tool/: CLAUDE.md  CMakeLists.txt  build.bat  sdkconfig.defaults
field-tool/main/: CMakeLists.txt  app_config.h  app_main.c  idf_component.yml
field-tool/main/flasher/: efuse_burn.c  efuse_burn.h  flasher_manager.c  flasher_manager.h  flasher_port.c  flasher_port.h
field-tool/main/sdcard/: sdcard_manager.c  sdcard_manager.h
field-tool/main/serial/: log_parser.c  log_parser.h  log_storage.c  log_storage.h  serial_monitor.c  serial_monitor.h
field-tool/main/ui/: ui_flasher.c  ui_flasher.h  ui_home.c  ui_home.h  ui_manager.c  ui_manager.h  ui_serial_monitor.c  ui_serial_monitor.h  ui_settings.c  ui_settings.h  ui_styles.c  ui_styles.h  ui_wifi_ap.c  ui_wifi_ap.h
field-tool/main/wifi/: firmware_download.c  firmware_download.h  wifi_manager.c  wifi_manager.h
